[package]
authors = ["Zhao Guangjian<zgj0315@gmail.com>"]
description = "Determine whether two files are copies of each other"
documentation = "https://docs.rs/is_copy"
edition = "2021"
keywords = ["copy", "file", "is file copy", "is copy"]
license = "MIT/Apache-2.0"
name = "is_copy"
readme = "README.md"
repository = "https://github.com/zgj0315/is_copy/"
version = "0.1.1"

[dependencies]
log = "0.4"
md5 = "0.7"

[dev-dependencies]
chrono = "0.4"
criterion = {version = "0.4", features = ["html_reports"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
harness = false
name = "is_file_copy_benchmark"
