[package]
authors = ["Zhao Guangjian<zgj0315@gmail.com>"]
description = "Determine whether two files are copies of each other"
documentation = "https://docs.rs/is_copy"
edition = "2021"
keywords = ["copy", "file", "is_copy", "file_copy", "copy_file"]
license = "MIT/Apache-2.0"
name = "is_copy"
readme = "README.md"
repository = "https://github.com/zgj0315/is_copy/"
version = "0.1.6"

[dependencies]
log = "0.4"

[dev-dependencies]
chrono = "0.4"
criterion = {version = "0.4", features = ["html_reports"]}
dev_util = "0.1"
image = "0.24"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
harness = false
name = "is_file_copy_benchmark"
